JTS conformal Delaunay script running. Replace Java FX Main/Application by clojure script; partly working.