@@ -22,13 +22,11 @@
 ::set XMX=-Xms12g -Xmx12g -Xmn5g
 set XMX=
 
-set OPENS=--add-opens java.base/java.lang=ALL-UNNAMED
+set OPENS=--add-opens java.base/java.lang=ALL-UNNAMED  --add-opens java.desktop/javax.imageio=ALL-UNNAMED --add-opens java.desktop/javax.imageio.plugins.tiff=ALL-UNNAMED --add-opens java.desktop/com.sun.imageio.plugins.tiff=ALL-UNNAMED
 
 set CP=-cp lib\*
 
 ::set MODULE_PATH=--module-path lib\*
-set MODULE_PATH=--module-path lib\javafx-base-25-win.jar;lib\javafx-base-25.jar;lib\javafx-controls-25-win.jar;lib\javafx-controls-25.jar;lib\javafx-graphics-25-win.jar;lib\javafx-graphics-25.jar;lib\javafx-media-25-win.jar;lib\javafx-media-25.jar;lib\javafx-web-25-win.jar;lib\javafx-web-25.jar
-set MODULES=--add-modules javafx.base,javafx.controls,javafx.graphics,javafx.media,javafx.web
 set JAVA="%JAVA_HOME%\bin\java"
 
 set CMD=%JAVA% -ea -dsa  %XMX% %OPENS% %CP% --sun-misc-unsafe-memory-access=allow --enable-native-access=javafx.graphics %MODULE_PATH% %MODULES% %*
